2010-12-19 Malignant Manor <malignantmanor@users.sourceforge.net>
	* Portable option in Win32 can be accessed from command line
		for Exult and Exult Studio. -p is the parameter for both.
		cheat.cc, exult.cc, files.utils.cc, mapedit/exult_studio.cc,
		mapedit/studio.cc

2010-12-06 Dominik Reichardt <dominus@users.sourceforge.net>
	* configure.ac: enable_exult_studio_support will add -lX11 to SYSLIBS. Fixes some
	  final linking problems in some Linux distributions
	
2010-12-19 Malignant Manor <malignantmanor@users.sourceforge.net>
	* Alternate configuration files work for Exult and Exult Studio.
		cheat.cc, exult.cc, mapedit/studio.cc
	* gamewin.cc: use get_effective_alignment() for is_hostile_nearby()

2010-12-19 Malignant Manor <malignantmanor@users.sourceforge.net>
	* charmDifficulty hard setting changes
	* keys.*: Separate keys allowed when Avatar is charmed
	* exult.cc: Allow paused_combat_select to work again when the Avatar
	is charmed (for uncharmed party members)
	* gamewin.cc: Charmed party members stay in combat mode

2010-12-18 Malignant Manor <malignantmanor@users.sourceforge.net>
	* charmDifficulty: Stop actor movement when charmed. Exult.cc,
		gamewin.*, keys.cc:
	* actors.cc: Combat is toggled if a party member gets charmed.

2010-12-17 Malignant Manor <malignantmanor@users.sourceforge.net>
	* add can_act_charmed and made checks use it
	* keyactions.cc: fix inventory skip bug introduced in 6571

2010-12-17 Malignant Manor <malignantmanor@users.sourceforge.net>
	* charmDifficulty: Space pauses excluded for charmed party members
	* Fixed space pauses failed read caused by last revision

2010-12-17 Malignant Manor <malignantmanor@users.sourceforge.net>
	* Added charm difficulty to combat options gump.
		gumps/CombatOptions_gump.*
	* Indenting: gamemgr/sigame.cc

2010-12-17 Malignant Manor <malignantmanor@users.sourceforge.net>
	* Added an option to make charmed more difficult.
		actors.cc, combat.cc, combat_opts.h, gamewin.cc,